# minipar-interpreter

./: .gitignore  makefile  pyproject.toml  requirements.txt  setup.py
docs/: Planejamento_Scrum.md  diagrama_classes.md  gramatica_BNF.md  pseudocodigo.md  tabela_simbolos.md
examples/: client_calc.minipar  neuron.minipar  quicksort.minipar  recommendation_system.minipar  run_examples.py  server_calc.minipar  threads_paralelas.minipar  xor_neuron.minipar
minipar/: __main__.py  ast.py  error.py  executor.py  lexer.py  parser.py  semantic.py  symtable.py  token.py
tests/unit/: test_ast.py  test_lexer.py  test_semantic.py  test_symtable.py  test_token.py
