[project]
name = "minipar"
version = "0.1.0"
description = "Interpretador da linguagem Minipar"
authors = [{ name = "Edeilson", email = "ecaf@ic.ufal.br" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["minipar"]
